--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@
     <script>
       var clipboard = new ClipboardJS('.copy');
       clipboard.on('success', function(e) {
-        console.log(e);
+        // console.log(e);
       });
       clipboard.on('error', function(e) {
-        console.log(e);
+        // console.log(e);
       });
     </script>
     </script>
